[package]
name = "tokio_client"
version = "0.1.0"
authors = ["Jean-Baptiste Gosselin <1536838+dennajort@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4", features = ["full"] }
bytes = "1.0"
