[package]
name = "tokio_server"
version = "0.1.0"
authors = ["Jean-Baptiste Gosselin <1536838+dennajort@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["full"] }
